# Enterprise-Analytics-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.services.txt  requirements.txt
.github/workflows/: bump-version.yml  ci.yml  docker-publish.yml  python-publish.yml
airflow/dags/: data_validation_dag.py  etl_batch_dag.py
config/: __init__.py  config.yaml  settings.py
data/: __init__.py  airflow_db_init.sql  models.py  warehouse_schema.sql
docker/: Dockerfile.services
k8s/: configmap.yaml  deployments.yaml  ingress.yaml  services.yaml
kafka/: __init__.py  consumer.py  producer.py
messaging/: __init__.py  consumer.py  producer.py
monitoring/: prometheus.yml
scripts/: generate_sample_data.py  health_check.py  validate_env.py
services/: __init__.py  analytics_api.py  anomaly_detection.py  forecasting_service.py
spark/: calculate_kpis.py  load_dimensions.py  load_facts.py
tests/: conftest.py  test_analytics_api.py  test_analytics_api_extended.py  test_analytics_api_new.py  test_anomaly_detection.py  test_anomaly_detection_extended.py  test_anomaly_detection_new.py  test_changelog.py  test_config.py  test_config_yaml.py  test_data_models.py  test_data_package.py  test_forecasting_extended.py  test_forecasting_new.py  test_forecasting_service.py  test_integration.py  test_kafka_consumer.py  test_kafka_producer.py  test_kafka_producer_batch.py  test_messaging_init.py  test_model_validation.py  test_producer_consumer_pipeline.py  test_request_models.py  test_retrain_pipeline.py  test_scripts.py  test_service_health.py  test_service_health_extended.py  test_services_package.py  test_services_version.py  test_settings.py  test_settings_extended.py  test_settings_validate.py  test_spark_jobs.py  test_spark_module_structure.py
